fix: refactor all login, connect to firebase to login with google

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">androidmycoffee</string>
+    <string name="default_web_client_id">862033386514-294vauml9itt76jpn9e66kb7btle5rqr.apps.googleusercontent.com</string>
 </resources>
